[gd_scene load_steps=11 format=3 uid="uid://bctti5sq00a8c"]

[ext_resource type="StyleBox" uid="uid://du4ejgkwkhwkm" path="res://styles/tooltip.tres" id="1_cvl2b"]
[ext_resource type="Script" path="res://pages/tooltip/tooltip.gd" id="2_de2jd"]
[ext_resource type="FontFile" uid="uid://grerfhlep4mj" path="res://assets/fonts/Carlito-Regular.ttf" id="3_hroug"]
[ext_resource type="FontFile" uid="uid://bg1uiqnkiuxrm" path="res://assets/fonts/friendlyscribbles.ttf" id="4_xx34a"]
[ext_resource type="LabelSettings" uid="uid://b4gmdh8nijusk" path="res://styles/tooltip_detail.tres" id="6_en25e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tlb64"]
content_margin_top = 5.0
draw_center = false

[sub_resource type="Animation" id="Animation_7vs3l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7nxa0"]
resource_name = "fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vfc88"]
resource_name = "tooltip_fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rsr5b"]
_data = {
"RESET": SubResource("Animation_7vs3l"),
"tooltip_fade_in": SubResource("Animation_7nxa0"),
"tooltip_fade_out": SubResource("Animation_vfc88")
}

[node name="Tooltip" type="PanelContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(432, 0)
offset_right = 432.0
offset_bottom = 281.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("1_cvl2b")
script = ExtResource("2_de2jd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_xx34a")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_tlb64")
text = "Snapper"
autowrap_mode = 3

[node name="DetailsLabel1" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hroug")
theme_override_font_sizes/font_size = 32
label_settings = ExtResource("6_en25e")
autowrap_mode = 3

[node name="DetailsLabel2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hroug")
theme_override_font_sizes/font_size = 32
text = "Size: 22kg/s"
label_settings = ExtResource("6_en25e")

[node name="DetailsLabel3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hroug")
theme_override_font_sizes/font_size = 32
text = "Expires in: 10 days"
label_settings = ExtResource("6_en25e")

[node name="DetailsLabel4" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hroug")
theme_override_font_sizes/font_size = 32
text = "Alive"
label_settings = ExtResource("6_en25e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rsr5b")
}
